chmod: added filter by category
